Fix logo alignment for rtl languages

--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -3,4 +3,17 @@
     margin: 5px;
     text-decoration: none;
   }
+  
+  .navbar-section {
+    @include breakpoint(md) {
+      [dir=ltr] & {
+        margin-left: auto;
+        margin-right: 2rem;
+      }
+      [dir=rtl] & {
+        margin-left: 2rem;
+        margin-right: auto;
+      }
+    }
+  }
 }
